tests/functional/repl_characterization/data/regression_9917.test
https://github.com/NixOS/nix/pull/9917 (Enter debugger more reliably in let expressions and function calls)

This test ensures that continues don't skip opportunities to enter the debugger.
  trace: before outer break
  info: breakpoint reached

  nix-repl> :c
  trace: before inner break
  info: breakpoint reached

  nix-repl> :bt

  0: error: breakpoint reached
  «none»:0
  1: while calling a function
  TEST_DATA/regression_9917.nix:3:5

       2|   a = builtins.trace "before inner break" (
       3|     builtins.break { msg = "hello"; }
        |     ^
       4|   );

  2: while calling a function
  TEST_DATA/regression_9917.nix:2:7

       1| let
       2|   a = builtins.trace "before inner break" (
        |       ^
       3|     builtins.break { msg = "hello"; }

  nix-repl> :c

  nix-repl> msg
  "hello"
